updated the alignment and fixed some logic issues

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/digitv2/pages/employee/workbench.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/digitv2/pages/employee/workbench.scss
@@ -48,20 +48,47 @@
           }
 
           .control-label {
-            width: 13rem;
+            width: 17.2rem;
             @extend .card-label;
             display: inline-flex;
             /* align-self: center; */
-            width: 13rem;
             line-height: 3rem;
+            /* web view*/
+            width: 17.2rem;
+
+            /* tablet view*/
+
+            @media (max-width: 768px) {
+              width: 13.2rem;
+
+            }
+            /* mobile view*/
+
+            @media (max-width: 368px) {
+              width: 10.2rem;
+
+            }
 
           }
 
           .form-control {
-            width: 28rem;
             @extend .light-input-border;
             @extend .employee-card-input;
+            /* web view*/
+            width: 37.5rem;
 
+            /* tablet view*/
+
+            @media (max-width: 768px) {
+              width: 28.2rem;
+
+            }
+            /* mobile view*/
+
+            @media (max-width: 368px) {
+              width: 15.2rem;
+
+            }
             .digit__control {
               border: 0px;
               @apply outline-none;
@@ -144,6 +171,17 @@
             padding: 1rem;
             margin: 1rem 0;
 
+
+            .digit-icon-toggle {
+              top: unset;
+              right: 1em;
+            }
+            .object-wrapper{
+              .array-remove-button-wrapper{
+                position: relative;
+              }
+            }
+
             /* have to revisit for objects
         [id^="root_"] {
           @extend .light-background;
@@ -156,13 +194,12 @@
 
             @extend .light-paper-secondary;
             @extend .light-paper-border;
-            padding: 1rem;
+            padding: 2rem;
             margin: 1rem 0;
 
 
             .array-wrapper .array-item {
               @extend .light-background;
-              padding: 1rem;
               position: relative;
 
               .array-remove-button-wrapper {
@@ -176,19 +213,33 @@
                   background-color: inherit !important;
                 }
               }
+        
+              span.all-input-field-wrapper{
+                @apply w-3/5;    
 
+                .form-control{
+                  @apply w-full;
+                }
+              }
+              .control-label{
+                @apply w-1/3;
+
+              }
             }
 
 
             .jk-digit-secondary-btn {
-              border: none;
-              padding: unset;
-              background-color: inherit;
+              height: 1.7em;
 
               h2 {
                 font-size: 1rem;
               }
             }
+          }
+          .digit-expand-collapse-header{
+border: 0;
+background-color: inherit;
+padding: 0;
           }
         }
       }
